--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 navbar{ font-size: 18px; margin-top:10%;
+  display: inline;
+ position: absolute;
 }
 
 ul{
@@ -12,7 +14,17 @@ li {
 }
 
 .header{
-  margin-top: -20%;
+  margin-top: -40%;
+  position: relative;
+
+}
+
+.photo {
+  width: 32%;
+  position: relative;
+  margin-top: -25%;
+  left: 50%;
+ 
 }
 
 .name{ position: relative;
@@ -29,16 +41,11 @@ font-weight: 700;
 
 }
 
-.rings{
-position: relative;
-left:-40%;
-
-}
-
 hr{
   width: 85%;
   position: relative;
 right:10%;
+
 }
 
 .line{
@@ -51,8 +58,8 @@ right:10%;
 border-bottom: 1px solid rgb(79, 225, 160);
   line-height: 20px;
 position: relative;
-left: 55%;
 font-size: 14px;
+
 }
 
 .largetext{
@@ -85,9 +92,10 @@ row-gap: 40%;
 }
 
 .container{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+display: grid;
+grid-template-columns: 1fr 1fr;
 margin-top: 50px;
+margin-right: 15%;
 column-gap: 30px;
 row-gap: 30px;
 
@@ -178,6 +186,11 @@ margin: 18px;
     }
 
     .rings{ position: relative;
-width: 65%;
+width: 55%;
+left: -40%;
 
+    }
+
+    .sec-two{
+      padding-top: 10%;
     }
