--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ border-bottom: 1px solid rgb(79, 225, 160);
   line-height: 20px;
 position: relative;
 font-size: 14px;
+padding-left: 20px;
 
 }
 
